force-app/main/default/objects/Referral_Advocacy_Insights__c/Referral_Advocacy_Insights__c.object-meta.xml
<CustomObject>
    <label>Referral &amp; Advocacy Insights</label>
    <nameField>
        <displayFormat>RAI-{0000}</displayFormat>
        <label>Referral &amp; Advocacy Insights Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral &amp; Advocacy Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>