force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Advocacy_Campaign_Participation__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_Campaign_Participation__c</fullName>
    <label>Advocacy Campaign Participation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>