force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Advocacy_Channel_Preference__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_Channel_Preference__c</fullName>
    <label>Advocacy Channel Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>