force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Advocacy_Score_Composite__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_Score_Composite__c</fullName>
    <label>Advocacy Score (Composite)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>