force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Advocacy_Touchpoints_Used__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_Touchpoints_Used__c</fullName>
    <label>Advocacy Touchpoints Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>