force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Advocate_Tier_Gold_Silver_Platinum__c.field-meta.xml
<CustomField>
    <fullName>Advocate_Tier_Gold_Silver_Platinum__c</fullName>
    <label>Advocate Tier (Gold/Silver/Platinum)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>