force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referral &amp; Advocacy Insights</relationshipLabel>
    <relationshipName>Referral_Advocacy_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>