force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Customer_Testimonial_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Customer_Testimonial_Submitted__c</fullName>
    <label>Customer Testimonial Submitted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>