force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/First_time_Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>First_time_Referral_Date__c</fullName>
    <label>First-time Referral Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>