force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Influenced_Purchase_Count__c.field-meta.xml
<CustomField>
    <fullName>Influenced_Purchase_Count__c</fullName>
    <label>Influenced Purchase Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>