force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Last_Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Referral_Date__c</fullName>
    <label>Last Referral Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>