force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Loyalty_Points_Earned_Through_Advocacy__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Points_Earned_Through_Advocacy__c</fullName>
    <label>Loyalty Points Earned Through Advocacy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>