force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Net_Promoter_Score_NPS_Rating__c.field-meta.xml
<CustomField>
    <fullName>Net_Promoter_Score_NPS_Rating__c</fullName>
    <label>Net Promoter Score (NPS) Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>