force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/NPS_Sentiment_Classification__c.field-meta.xml
<CustomField>
    <fullName>NPS_Sentiment_Classification__c</fullName>
    <label>NPS Sentiment Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>