force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Promoter_Lifetime_Value__c.field-meta.xml
<CustomField>
    <fullName>Promoter_Lifetime_Value__c</fullName>
    <label>Promoter Lifetime Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>