force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Referral_based_Revenue_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Referral_based_Revenue_Contribution__c</fullName>
    <label>Referral-based Revenue Contribution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>