force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Referral_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Referral_Conversion_Rate__c</fullName>
    <label>Referral Conversion Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>