force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Referral_Count_Customer_generated__c.field-meta.xml
<CustomField>
    <fullName>Referral_Count_Customer_generated__c</fullName>
    <label>Referral Count (Customer generated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>