force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Referral_Fraud_Check_Flag__c.field-meta.xml
<CustomField>
    <fullName>Referral_Fraud_Check_Flag__c</fullName>
    <label>Referral Fraud Check Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>