force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Referral_Incentive_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Referral_Incentive_Eligibility__c</fullName>
    <label>Referral Incentive Eligibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>