force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Referral_Reward_Availed__c.field-meta.xml
<CustomField>
    <fullName>Referral_Reward_Availed__c</fullName>
    <label>Referral Reward Availed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>