force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Referral_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source_Type__c</fullName>
    <label>Referral Source Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>