force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Referrer_Name_ID__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Name_ID__c</fullName>
    <label>Referrer Name / ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>