force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Review_Rating__c.field-meta.xml
<CustomField>
    <fullName>Review_Rating__c</fullName>
    <label>Review Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>