force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Review_Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>Review_Sentiment_Score__c</fullName>
    <label>Review Sentiment Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>