force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Review_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Review_Submitted__c</fullName>
    <label>Review Submitted?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>