force-app/main/default/objects/Referral_Advocacy_Insights__c/fields/Social_Media_Mentions__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Mentions__c</fullName>
    <label>Social Media Mentions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>